--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "angular2-qrcode": "^2.0.3",
     "core-js": "^2.5.4",
     "ng-zorro-antd": "^7.2.0",
+    "ngx-quill": "^4.6.13",
     "qrcode": "^1.3.3",
-    "rxjs": "~6.3.3",
+    "quill": "^1.3.6",
+    "rxjs": "^6.3.3",
     "ts-md5": "^1.2.4",
     "tslib": "^1.9.0",
-    "ngx-quill": "^4.6.13",
-    "quill": "^1.3.6",
     "viser-ng": "^2.4.1",
     "zone.js": "~0.8.26"
   },
