--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~7.2.0",
     "@antv/data-set": "^0.10.2",
     "@ngrx/store": "^7.4.0",
+    "@polyv/vod-upload-js-sdk": "^1.1.0",
     "angular-baidu-maps": "^3.0.0",
     "angular2-qrcode": "^2.0.3",
     "core-js": "^2.5.4",
@@ -31,7 +32,7 @@
     "qrcode": "^1.3.3",
     "quill": "^1.3.6",
     "rxjs": "^6.3.3",
-    "ts-md5": "^1.2.4",
+    "ts-md5": "^1.2.7",
     "tslib": "^1.9.0",
     "viser-ng": "^2.4.1",
     "zone.js": "~0.8.26"
